tests/security-scan/configs/misconfig-auth/patches/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-server
$patch: delete
